# concorde-py

./: !deprecated_move_favourites.py  README.md  download.py  logger.py  main.py  metadata.py  metadata_flac.py  metadata_mp4.py  pyproject.toml  scripts.py  synchronize.py  test.py  tidal.py  transfer.py
